--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@nozbe/watermelondb": "^0.23.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.5.1",
     "@react-navigation/compat": "^5.1.25",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
     "babel-preset-expo": "8.3.0"
   },
   "private": true
