--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-decorators": "^7.14.5",
-    "babel-preset-expo": "8.3.0"
+    "@babel/plugin-proposal-decorators": "^7.15.4",
+    "@types/hoist-non-react-statics": "^3.3.1",
+    "@types/react": "^16.9.23",
+    "babel-preset-expo": "8.3.0",
+    "better-sqlite3": "^7.4.3"
   },
   "private": true
 }
