--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "expo-app-loading": "^1.0.1",
     "expo-asset": "~8.3.2",
     "expo-font": "~9.2.1",
+    "expo-sqlite": "^9.2.1",
+    "expo-sqlite-orm": "^1.5.6",
     "expo-status-bar": "~1.0.4",
     "galio-framework": "^0.8.0",
     "prop-types": "^15.7.2",
@@ -29,7 +31,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-google-places-autocomplete": "^2.4.1",
-    "react-native-modal-dropdown": "git+https://github.com/siemiatj/react-native-modal-dropdown.git",
+    "react-native-modal-dropdown": "^1.0.2",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
